; ModuleID = '/home/carl/AnghaBench/linux/samples/bpf/extr_map_perf_test_user.c_test_hash_lookup.c'
source_filename = "/home/carl/AnghaBench/linux/samples/bpf/extr_map_perf_test_user.c_test_hash_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@max_cnt = common dso_local global i32 0, align 4
@__NR_getpgid = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"%d:hash_lookup %lld lookups per sec\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @test_hash_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_hash_lookup(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = call i32 (...) @time_get_ns()
  store i32 %5, i32* %3, align 4
  store i32 0, i32* %4, align 4
  br label %6

6:                                                ; preds = %13, %1
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @max_cnt, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %16

10:                                               ; preds = %6
  %11 = load i32, i32* @__NR_getpgid, align 4
  %12 = call i32 @syscall(i32 %11, i32 0)
  br label %13

13:                                               ; preds = %10
  %14 = load i32, i32* %4, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %4, align 4
  br label %6

16:                                               ; preds = %6
  %17 = load i32, i32* %2, align 4
  %18 = load i32, i32* @max_cnt, align 4
  %19 = sext i32 %18 to i64
  %20 = mul nsw i64 %19, 1000000000
  %21 = mul nsw i64 %20, 64
  %22 = call i32 (...) @time_get_ns()
  %23 = load i32, i32* %3, align 4
  %24 = sub nsw i32 %22, %23
  %25 = sext i32 %24 to i64
  %26 = sdiv i64 %21, %25
  %27 = trunc i64 %26 to i32
  %28 = call i32 @printf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %27)
  ret void
}

declare dso_local i32 @time_get_ns(...) #1

declare dso_local i32 @syscall(i32, i32) #1

declare dso_local i32 @printf(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
